--- a/styles/style.css
+++ b/styles/style.css
@@ -246,16 +246,49 @@
   text-shadow: 2px 2px 6px black ;
 }
 
-/*Card Section*/
+/*Cards Section*/
 
-.card-section{
+.cards-section{
   display: flex;
   align-items: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .cards{
-  margin: 100px 50px;
+  margin: 100px 70px;
   background: var(--background);
-  width: 70%;
+  display: flex;
+  flex-direction: row;
+}
+
+.card-image {
+  display: flex;
+}
+
+.about-content {
+  text-align: center;
+  padding: 20px 30px;
+}
+
+.get-involved-content {
+  text-align: center;
+  padding: 20px 30px;
+}
+
+.donate-content {
+  text-align: center;
+  padding: 20px 30px;
+}
+
+
+/* Button */
+.see-more-button{
+  font-size: 0.8em;
+  color: #EFEBE5;
+  background: #50A2F5;
+  border: none;
+  border-radius: 25px;
+  padding: 10px 20px;
+  align-items: flex;
+  margin-top: 20px;
 }
