--- a/styles/style.css
+++ b/styles/style.css
@@ -315,3 +315,48 @@
   align-items: flex;
   margin-top: 20px;
 }
+
+
+footer {
+	width:100%;
+	padding:100px 0;
+  float: left;
+	text-align: center;
+  background-color:var(--background);
+}
+
+footer a:link {
+	color:#B2CDEA;
+	text-decoration: none;
+}
+
+footer a:visited {
+	color:#B2CDEA;
+	text-decoration: none;
+}
+footer a:hover {
+	color:#4392E0;
+	text-decoration: none;
+}
+footer a:active {
+	color:#ffffff;
+	text-decoration: none;
+}
+
+.copyright {
+  width:100%;
+} 
+
+.fa-facebook,
+.fa-twitter,
+.fa-instagram {
+	font-size: 2em;
+	margin: 20px 5px 0 5px;
+	color: #B2CDEA;
+}
+
+.fa-facebook:hover,
+.fa-twitter:hover,
+.fa-instagram:hover {
+	color: #4392E0;
+}
